--- a/semaphore/Base.lproj/Main.storyboard
+++ b/semaphore/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="semaphore" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Kq-fw-JOL">
+                                <rect key="frame" x="120" y="113" width="80" height="80"/>
+                                <color key="backgroundColor" red="0.9723784327507019" green="0.94290244579315186" blue="0.039648573845624924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="64A-Bk-AZt"/>
+                                    <constraint firstAttribute="height" constant="80" id="rcj-Qw-g3f"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ABe-nB-d5u">
+                                <rect key="frame" x="120" y="5" width="80" height="78"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="MWl-1m-prv"/>
+                                    <constraint firstAttribute="height" constant="78" id="iYp-4G-GEF"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6S-CG-oTE">
+                                <rect key="frame" x="111.5" y="426" width="97.5" height="44"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="START">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" systemColor="linkColor"/>
+                                    </backgroundConfiguration>
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
+                                    <color key="baseForegroundColor" systemColor="tertiarySystemBackgroundColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="buttonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="e8y-i6-55h"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="skw-2G-AMo">
+                                <rect key="frame" x="120" y="223" width="80" height="80"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Mc7-Cr-rLa"/>
+                                    <constraint firstAttribute="width" constant="80" id="a4v-X6-Rrg"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ABe-nB-d5u" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="78o-V9-fNr"/>
+                            <constraint firstItem="8Kq-fw-JOL" firstAttribute="top" secondItem="ABe-nB-d5u" secondAttribute="bottom" constant="30" id="HQN-Ni-ZaI"/>
+                            <constraint firstItem="8Kq-fw-JOL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JMQ-s5-tJb"/>
+                            <constraint firstItem="skw-2G-AMo" firstAttribute="top" secondItem="8Kq-fw-JOL" secondAttribute="bottom" constant="30" id="XxP-Rw-RTf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="W6S-CG-oTE" secondAttribute="bottom" constant="10" id="fUj-o5-pRd"/>
+                            <constraint firstItem="W6S-CG-oTE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jKz-om-dII"/>
+                            <constraint firstItem="ABe-nB-d5u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="stb-zS-oLh"/>
+                            <constraint firstItem="skw-2G-AMo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="y2C-nb-iy8"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenLight" destination="skw-2G-AMo" id="MMi-Dh-vwn"/>
+                        <outlet property="redLight" destination="ABe-nB-d5u" id="7SP-9U-QWU"/>
+                        <outlet property="startButton" destination="W6S-CG-oTE" id="lTl-bH-apP"/>
+                        <outlet property="yellowLight" destination="8Kq-fw-JOL" id="TcT-1f-qng"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.75" y="68.75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tertiarySystemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
